--- a/style.css
+++ b/style.css
@@ -1,2 +1,3 @@
-html, body {margin: 0; padding: 0;}
+@import url('https://fonts.googleapis.com/css?family=Overpass&display=swap'); 
+html, body {margin: 0; padding: 0; font-family: 'Overpass', sans-serif;}
 canvas {display: block;}
